--- a/com.vykin.mnis.helpdesk/grails-app/assets/stylesheets/application.css
+++ b/com.vykin.mnis.helpdesk/grails-app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
 *= require bootstrap
 *= require font-awesome
 *= require tether
+*= require jquery.bootgrid
 * require grails
 * require main
 * require mobile
